--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@ __pycache__/
 # C extensions
 *.so
 
+# Idea
+.idea/.gitignore
+.idea/cashback.iml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/misc.xml
+
+
 # Distribution / packaging
 .Python
 build/
