--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
-django-cpf
-django-print-sql
-djangorestframework
-markdown
-djangorestframework-jwt
-django-filter
-coverage
-lxml
-defusedxml
-django-nose
-nose-exclude
-factory_boy
+coverage==3.6
+Django==3.1.3
+django-cpf==0.1.0
+django-filter==2.4.0
+django-nose==1.4.7
+django-print-sql==2018.3.6
+djangorestframework==3.12.2
+djangorestframework-jwt==1.11.0
+docker-py==1.10.6
+factory-boy==3.1.0
+httplib2==0.11.3
+lxml==4.6.1
+Markdown==3.3.3
+nose==1.3.7
+nose-exclude==0.5.0
+oauth==1.0.1
+psycopg2-binary==2.8.6
+PyJWT==1.7.1
+requests==2.25.0
+django-nose==1.4.7
