--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -18,10 +18,10 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        apt-get install pip3
-        pip3 install -r requirements.txt
-        pip3 install flake8 setuptools wheel twine
-        pip3 install -r requirements.txt
+        python3 -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install flake8 setuptools wheel twine
+        pip install -r requirements.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
