--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -30,12 +30,12 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Build the docker-compose stack
       run: |
-        - docker-compose up -d
+        docker-compose up -d
     - name: Check running containers
       run: docker ps -a
     - name: Running docker container
       run: |
-         docker exec -it $(docker ps -aqf "name=cashback_web") bash
+        docker exec -it $(docker ps -aqf "name=cashback_web") bash
     - name: Running database initial scripts
       run: |
         ./docker-entrypoint.sh --environment=dev
